--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/image": "^0.18.0",
     "astro": "^5.7.13",
     "gsap": "^3.13.0",
     "swiper": "^11.2.6"
