--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@astrojs/image": "^0.18.0",
     "astro": "^5.7.13",
     "gsap": "^3.13.0",
+    "sharp": "^0.34.2",
     "swiper": "^11.2.6"
   }
 }
