--- a/netlify.toml
+++ b/netlify.toml
@@ -1,3 +1,7 @@
 [build]
-  command = "npm run build"
-  publish = "dist"
+  command = "npm run build" # 若無 build 指令，可留空
+  functions = "netlify/functions"
+  publish = "dist" # 你的靜態檔案輸出目錄，根據專案調整
+
+[functions]
+  node_bundler = "esbuild"
