--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
   },
   "dependencies": {
     "@astrojs/image": "^0.18.0",
-    "astro": "^5.7.13",
+    "astro": "^5.8.0",
+    "axios": "^1.9.0",
+    "dotenv": "^16.5.0",
     "gsap": "^3.13.0",
     "sharp": "^0.34.2",
-    "swiper": "^11.2.6"
+    "swiper": "^11.2.6",
+    "zod": "^3.25.30"
   }
 }
